tests/errors/cmplx_03.f90
program cmplx_03
    print*, cmplx((1.00000000, real(0, kind=4)), kind=8)
end